[gd_scene load_steps=2 format=3 uid="uid://6hfxgildm5pi"]

[ext_resource type="Script" path="res://ui/button_remapper/button_remapper.gd" id="1_u0xpf"]

[node name="ButtonRemapper" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u0xpf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 115

[node name="ControllerSelection" type="MenuButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
text = "Use: Controller 1"
item_count = 4
popup/item_0/text = "Controller 1"
popup/item_1/text = "Controller 2"
popup/item_1/id = 1
popup/item_2/text = "Controller 3"
popup/item_2/id = 2
popup/item_3/text = "Controller 4"
popup/item_3/id = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 115

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "DEADZONE"
fit_content = true
autowrap_mode = 0

[node name="DeadzoneSlider" type="HSlider" parent="VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Reset All"

[node name="ClearButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Clear All"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ActionList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/ActionList"]
layout_mode = 2
theme_override_constants/margin_bottom = 26

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/ActionList/MarginContainer"]
layout_mode = 2

[node name="Action" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer/ActionList/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Action Name"
fit_content = true
autowrap_mode = 0

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/ActionList/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Mouse" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer/ActionList/MarginContainer/HBoxContainer/CenterContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mouse"
fit_content = true
autowrap_mode = 0

[node name="CenterContainer4" type="CenterContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/ActionList/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Keyboard" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer/ActionList/MarginContainer/HBoxContainer/CenterContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Keyboard"
fit_content = true
autowrap_mode = 0

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/ActionList/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Controller" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer/ActionList/MarginContainer/HBoxContainer/CenterContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Controller"
fit_content = true
autowrap_mode = 0

[connection signal="value_changed" from="VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer/DeadzoneSlider" to="." method="_on_deadzone_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
